Fixing routing for Github pages. Updating spacing for header navigation items.

--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -35,22 +35,32 @@ $baseclass: 'app-bar';
       text-decoration: none;
     }
 
-    p {
-      &:not(:last-child) {
-        margin-right: 4 * $rem-base;
+    // p {
+    //   &:not(:last-child) {
+    //     margin-right: 4 * $rem-base;
+    //   }
+    // }
+
+    > * {
+      .button {
+        margin-left: 0;
       }
-    }
 
-    *:first-child .button {
-      margin-right: 0;
-    }
+      &:nth-child(4).active .button__bar--inner {
+        background: $brand-red;
+      }
 
-    *:first-child.active .button__bar--inner {
-      background: $brand-red;
-    }
+      &:nth-child(3).active .button__bar--inner {
+        background: $brand-yellow;
+      }
 
-    *:nth-child(2).active .button__bar--inner {
-      background: $brand-yellow;
+      &:nth-child(2).active .button__bar--inner {
+        background: $brand-green;
+      }
+
+      &:nth-child(1).active .button__bar--inner {
+        background: $brand-pink;
+      }
     }
   }
 
